--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.MyMPAndroidChartTest">
         <activity android:name=".line.LineActivity" />
         <activity android:name=".line.LineChartActivity1" />
+        <activity android:name=".line.MultiLineChartActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
